# twine-models

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: stratified_tank.rs
src/: lib.rs  models.rs  support.rs
src/models/: thermal.rs
src/models/thermal/: hx.rs  tank.rs
src/models/thermal/hx/: core.rs  discretized.rs
src/models/thermal/hx/core/: given_ua.rs  metrics.rs  solve.rs  traits.rs
src/models/thermal/hx/core/given_ua/: error.rs  problem.rs
src/models/thermal/hx/core/input/: given.rs  known.rs
src/models/thermal/hx/discretized/: core.rs  recuperator.rs
src/models/thermal/tank/: stratified.rs
src/models/thermal/tank/stratified/: core.rs
src/support/: constraint.rs  control.rs  hx.rs  thermo.rs  turbomachinery.rs  units.rs
src/support/constraint/: non_negative.rs  non_positive.rs  non_zero.rs  strictly_negative.rs  strictly_positive.rs  unit_interval.rs
src/support/constraint/unit_interval/: closed.rs  lower_open.rs  open.rs  upper_open.rs
src/support/control/: thermostat.rs  types.rs
src/support/control/thermostat/: setpoint.rs
src/support/hx/: arrangement.rs  capacitance_rate.rs  capacity_ratio.rs  effectiveness_ntu.rs  flow.rs  functional.rs  stream.rs
src/support/hx/arrangement/: counter_flow.rs  cross_flow.rs  parallel_flow.rs  shell_and_tube.rs
src/support/schedule/: step_schedule.rs
src/support/thermo/: capability.rs  error.rs  fluid.rs  model.rs  state.rs
src/support/thermo/capability/: base.rs  properties.rs  state_from.rs
src/support/thermo/fluid/: air.rs  carbon_dioxide.rs  water.rs
src/support/thermo/model/: coolprop.rs  ideal_gas_eos.rs  incompressible.rs  perfect_gas.rs
src/support/thermo/model/coolprop/: error.rs  ffi.rs  wrapper.rs
src/support/turbomachinery/: compressor.rs  efficiency.rs  inlet_properties.rs  test_utils.rs  turbine.rs  work.rs
src/support/turbomachinery/compressor/: isentropic.rs  types.rs
src/support/turbomachinery/turbine/: isentropic.rs  types.rs
src/support/units/: quantities.rs  temperature_difference.rs
tests/: coolprop_wasm.rs
(+24 files in other folders)
