[package]
name = "twine-models"
version = "0.1.0"
edition = "2024"
authors = ["Isentropic Development <info@isentropic.dev>"]
license = "MIT"
repository = "https://github.com/isentropic-dev/twine-models"
readme = "README.md"
description = "Domain-specific models and model-building tools for Twine"

[dependencies]
num-traits = "0.2"
rfluids = { version = "0.3.0", optional = true }
thiserror = "2.0"
# TODO: Switch to version dependency once twine-core 0.5 is published to crates.io
twine-core = { git = "https://github.com/isentropic-dev/twine.git", branch = "main" }
uom = "0.36"

[features]
default = ["coolprop"]
coolprop = ["dep:rfluids"]

[dev-dependencies]
approx = "0.5"
