[package]
name = "twine-models"
version = "0.1.0"
edition = "2024"
authors = ["Isentropic Development <info@isentropic.dev>"]
license = "MIT"
repository = "https://github.com/isentropic-dev/twine-models"
readme = "README.md"
description = "Domain-specific models and model-building tools for Twine"

[dependencies]
num-traits = "0.2"
rfluids = { version = "0.3.0", optional = true }
thiserror = "2.0"
# TODO: Switch to version dependencies once twine-core 0.5 and twine-solvers 0.5 are published to crates.io
twine-core = { git = "https://github.com/isentropic-dev/twine.git", branch = "main" }
twine-solvers = { git = "https://github.com/isentropic-dev/twine.git", branch = "main" }
uom = "0.36"

[features]
default = ["coolprop"]
coolprop = ["dep:rfluids"]

[dev-dependencies]
approx = "0.5"

[lints.clippy]
# Enforce `foo.rs` + `foo/` module style over `foo/mod.rs`
mod_module_files = "deny"
